# prompt-hardener

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.agents/skills/agent-spec-builder/: SKILL.md
.github/workflows/: lint-format.yml  release.yml  test.yaml  test.yml
docs/: agent-spec.md  analysis-rules.md  attack-simulation.md  techniques.md  tutorials.md  vnext-design.md
example/: improved_summary_en.txt  summary1_en.txt  summary1_jp.txt  summary2_en.txt  summary2_jp.txt
example/prompt/: ai_assistant.json  summary.json  summary_en.txt  summary_invalid.json  summary_jp.txt
example/prompt/chat/: ai_assistant_bedrock_claude.json  ai_assistant_claude.json  ai_assistant_openai.json  summary_bedrock.json  summary_claude.json  summary_openai.json
example/prompt/completion/: summary.txt
example/report/: ai_assistant_prompt_security_report.html  ai_assistant_prompt_security_report_attack_results.json  summary_prompt_security_report.html  summary_prompt_security_report_attack_results.json
example/tools/: ai_assistant_bedrock_claude.json  ai_assistant_claude.json  ai_assistant_openai.json  summary_bedrock_claude.json  summary_claude.json  summary_openai.json
examples/agent-basic/: agent_spec.yaml
examples/chatbot-minimal/: agent_spec.yaml
examples/rag-internal-assistant/: agent_spec.yaml
schemas/: agent_spec.schema.json  analyze_report.schema.json  report.schema.json
src/: attack.py  evaluate.py  gen_report.py  gradio_app.py  improve.py  llm_client.py  main.py  prompt.py  schema.py  test_improvement.py  utils.py  webui.py
src/prompt_hardener/: agent_spec.py  attack.py  diff.py  evaluate.py  gen_report.py  improve.py  llm_client.py  main.py  models.py  progress.py  prompt.py  prompt_improvement.py  report.py  simulate.py  utils.py  webui.py
src/prompt_hardener/analyze/: __init__.py  engine.py  markdown.py  report.py  scoring.py
tests/: test_agent_spec.py  test_agent_spec_builder_skill_docs.py  test_analyze.py  test_attack_legacy.py  test_catalog.py  test_diff.py  test_high_priority_fixes.py  test_llm_client.py  test_progress.py  test_prompt.py  test_prompt_improvement.py  test_remediate.py  test_report.py  test_simulate.py  test_simulate_executor.py  test_simulate_live.py  test_utils.py  test_webui.py
tests/fixtures/: agent_high_impact_spec.yaml  agent_insecure_spec.yaml  agent_spec.yaml  agent_with_effects_spec.yaml  analyze_result.json  chatbot_spec.yaml  mcp_agent_spec.yaml  rag_insecure_spec.yaml  rag_spec.yaml  remediate_result.json  simulate_result.json
(+62 files in other folders)
