[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-hardener"
version = "0.5.0"
description = "Automated Evaluation and Hardening of LLM System Prompts"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
dependencies = [
  "requests==2.32.5",
  "openai==2.21.0",
  "argparse==1.4.0",
  "ruff==0.15.1",
  "gradio==6.8.0",
  "anthropic==0.83.0",
  "boto3==1.42.50",
  "pytest==9.0.2",
  "pyyaml>=6.0",
  "jsonschema>=4.17",
]

[project.scripts]
prompt-hardener = "prompt_hardener.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prompt_hardener = ["schemas/*.json", "templates/*.yaml", "catalog/*.yaml"]
